toggle dark mode now works correctly with styled-components

--- a/src/App.css
+++ b/src/App.css
@@ -13,15 +13,30 @@
   position: fixed;
 }
 
-.projects-container {
-
+.main-container {
   height: 100vh;
   width: 100vw;
   position: fixed;
   overflow-y: scroll;
-  color: white;
+  color: black;
 }
 
 .canvas-container {
   position: relative;
+}
+
+.main-container::-webkit-scrollbar {
+  width: 10px;               /* width of the entire scrollbar */
+}
+.main-container::-webkit-scrollbar-track {
+  background: cyan;        /* color of the tracking area */
+}
+.main-container::-webkit-scrollbar-thumb {
+  background-color: blue;    /* color of the scroll thumb */
+  border-radius: 20px;       /* roundness of the scroll thumb */
+  border: 3px solid cyan;  /* creates padding around scroll thumb */
+}
+
+.dark-theme {
+  color: white;
 }
